tests/toylang/pos/000072_cdrc2.toylang
program a = { if a + a then { }; } .
