tests/toylang/neg/000701_mutation.toylang
program a = { a = a then == a; } .
